feat: 优化接口
